# nicks-nice-gui

./: README.md  pyproject.toml
nicks_nice_gui/: josn_editor.py  main.py  pandas_gui.py
