[tool.poetry]
name = "nicks-nice-gui"
version = "0.1.0"
description = ""
authors = ["_MircoWave_ <clarknick1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^2.1.1"
nicegui = "^1.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
